codeSkeleton -> code-skeleton

--- a/cookbook/appetizer.html
+++ b/cookbook/appetizer.html
@@ -604,13 +604,13 @@
                                 and select "New folder..."
                             </p>
                             <p>
-                                Then name the new folder "codeSkeleton"
+                                Then name the new folder "code-skeleton"
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img src="images/codeSkeleton_1.png" alt="githubdesktop.png" />
                             <figcaption>
-                                After creating the codeSkeleton folder
+                                After creating the code-skeleton folder
                             </figcaption>
                         </div>
                     </div>
@@ -623,7 +623,7 @@
                                 "css" and "images".
                             </p>
                             <p>
-                                To do so, right-click your new "codeSkeleton" folder
+                                To do so, right-click your new "code-skeleton" folder
                                 and select "New folder..." again
                             </p>
                             <p>
@@ -655,12 +655,12 @@
                                 the "images" folder.
                             </p>
                             <p>
-                                To do so, right-click your new "codeSkeleton" folder
+                                To do so, right-click your new "code-skeleton" folder
                                 and select "New folder..." again
                             </p>
                             <p>
                                 <strong>
-                                    Make sure you right-click the "codeSkeleton" folder
+                                    Make sure you right-click the "code-skeleton" folder
                                     and not the "css" folder! <br><br>
                                     If you don't, you may
                                     accidentally create the "images" folder inside of the 
@@ -690,7 +690,7 @@
                                 Finally, you're going to create your first HTML file!
                             </p>
                             <p>
-                                Right-click your new "codeSkeleton" folder one last time
+                                Right-click your new "code-skeleton" folder one last time
                                 and select "New file..." this time
                             </p>
                             <p>
@@ -829,7 +829,7 @@
                         <div class="textContainer">
                             <p>
                                 Now, jump back to Github Desktop. In the app, you should see the 
-                                changes to your code_skeleton folder; in this case, only the 
+                                changes to your code-skeleton folder; in this case, only the 
                                 index.html file.
                             </p>
                             <p>
@@ -943,7 +943,7 @@
                             <p>
                                 Now return to the Github website, and go into the repository 
                                 you made earlier with github.io at the end of it. Once you navigate 
-                                to the main repository code screen, you should see your codeSkeleton 
+                                to the main repository code screen, you should see your code-skeleton 
                                 folder that you created in the middle section.
                             </p>
                             <p>
@@ -989,7 +989,7 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                In order to find your codeSkeleton site (a project nested in your 
+                                In order to find your code-skeleton site (a project nested in your 
                                 main repository) for submission, you must add the project folder 
                                 name to the end of the URL of your homepage.
                             </p>
@@ -1001,10 +1001,10 @@
                             </p>
                             <p>
                                 For example:<br><br>
-                                https://gdwd-kc.github.io/kctobias.github.io<b>/codeSkeleton/</b>
+                                https://kctobias.github.io<b>/code-skeleton/</b>
                             </p>
                             <p>
-                                Your codeSkeleton project folder will only display an empty page, 
+                                Your code-skeleton project folder will only display an empty page, 
                                 with the name of "Document" on the tab.
                             </p>
                             <p>
