wiki page updates

--- a/cookbook/meal-prep/wiki-page-1/page0.html
+++ b/cookbook/meal-prep/wiki-page-1/page0.html
@@ -4,17 +4,9 @@
         <meta charset="UTF-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Wiki Page 1</title>
-        <style>
-            body.boxes * {
-                border: 3px solid blue;
-            }
-            body.boxes a {
-                border: 3px solid crimson;
-            }
-        </style>
+        <title>Wiki Page 1 (Exercise)</title>
     </head>
-    <body class="">
+    <body>
         <h1>Crown shyness</h1>
         <hr>
         <h5>From Wikipedia, the free encyclopedia</h5>
@@ -59,7 +51,9 @@
         <hr>
         <img 
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Dryobalanops_Aromatica_canopy.jpg/600px-Dryobalanops_Aromatica_canopy.jpg"
-            width="300">
+            alt="Canopy of D. aromatica at the Forest Research Institute Malaysia displaying crown shyness"
+            width="300"
+        >
         <p>
             The exact physiological basis of crown shyness is not 
             certain.<sup>[6]</sup> The phenomenon has been 
