--- a/cookbook/meal-prep/wiki-page-2/page0.html
+++ b/cookbook/meal-prep/wiki-page-2/page0.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"> 
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <title>Document</title>
+        <title>Wiki Page 2 (Exercise)</title>
     </head>
     <body>
         <h1>Graphic design</h1>
@@ -49,7 +49,10 @@
             <a href="#">digital tools</a>, where it is usual to use text and 
             graphics to communicate visually.
         </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Graphic-designer-application-projects-collage-2.0.jpg/330px-Graphic-designer-application-projects-collage-2.0.jpg">
+        <img 
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Graphic-designer-application-projects-collage-2.0.jpg/330px-Graphic-designer-application-projects-collage-2.0.jpg"
+            alt="Collage of examples of graphic design"
+        >
         <p>
             The role of the <a href="#">graphic designer</a> 
             in the communication process is that of encoder 
