--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -63,11 +63,11 @@
       <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
       <h2>Announcements (6:10)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:00-7:10): HTML Children Challenge Kahoot</h2>
+      <h2>Period 1 (6:00-7:10): CSS Grid Review | Responsive Portfolio Part 2</h2>
       <h3>SHORT BREAK (10 MIN)</h3>
-      <h2>Period 2 (7:20-8:30): Semantic HTML Review Demo | Lab Time (Wiki Page 3) </h2>
+      <h2>Period 2 (7:20-8:30): Responsive Portfolio Part 2 </h2>
       <h3>DINNER BREAK (45 MIN)</h3>
-      <h2>Period 3 (9:15-11:00): Lab Time (Wiki Page 3)</h2>
+      <h2>Period 3 (9:15-11:00): Responsive Portfolio Part 2 | Maybe Part 3?</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
