--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,7 +58,7 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for Day 5 (06/01)</h1>
+    <h1>GDWD 105 Agenda for Day 17 (06/19)</h1>
     <div id="agenda">
       <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
       <h2>Announcements (6:10)</h2>
@@ -73,11 +73,11 @@
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
       <h2 class="assnItem warning">
-        <span>Wiki Page 2</span>
+        <span>Responsive Portfolio - Part 1</span>
         <span>Due YESTERDAY</span>
       </h2>
       <h2 class="assnItem highlight">
-        <span>Wiki Page 3 (Project Grade)</span>
+        <span>Responsive Portfolio - Part 2</span>
         <span>Due TONIGHT at 11pm</span>
       </h2>
     </div>
