font awesome tweaks

--- a/cookbook/ingredients/icon-library.html
+++ b/cookbook/ingredients/icon-library.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Icon Library (Font Awesome)</title>
         <!-- 
-            The link below is responsive for loading the 
+            The &lt;link&gt; below is responsive for loading the 
             Font Awesome icon library.  Remember that only
             "free" icons can be loaded in this way; "pro"
             icons won't show up at all, so if you have
@@ -16,6 +16,19 @@
     </head>
     <body>
         <h1>Icon Library Example (Font Awesome)</h1>
+        <p>
+            Icon libraries are collections of prepackaged 
+            code that you can include on your page,
+            so that you can use icons that someone else 
+            has already created.
+        </p>
+        <p>
+            The icon library in this example come from a 
+            site called 
+            <a href="https://fontawesome.com/icons">
+                Font Awesome
+            </a>.
+        </p>
         <h3>Instructions to Use</h3>
         <p>
             To use the Font Awesome Library on your page,
