--- a/cookbook/meal-prep/movie-showcase/page0.html
+++ b/cookbook/meal-prep/movie-showcase/page0.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Movie Showcase (Project)</title>
         <!-- 
-            The link below is responsive for loading the 
+            The &lt;link&gt; below is responsive for loading the 
             Font Awesome icon library.  Remember that only
             "free" icons can be loaded in this way; "pro"
             icons won't show up at all, so if students have
