update naming convention

--- a/cookbook/ingredients-cheatsheet.html
+++ b/cookbook/ingredients-cheatsheet.html
@@ -214,8 +214,8 @@
                             <div>
                                 <span class="openingTag htmlParent">
                                     &lt;div
-                                    <span class="attrName">id</span><span class="assnOperator">=</span>&quot;<span class="attrValue">myIdValue</span>&quot;
-                                    <span class="attrName">class</span><span class="assnOperator">=</span>&quot;<span class="attrValue">myClassValue</span>&quot;&gt;
+                                    <span class="attrName">id</span><span class="assnOperator">=</span>&quot;<span class="attrValue">my-id-value</span>&quot;
+                                    <span class="attrName">class</span><span class="assnOperator">=</span>&quot;<span class="attrValue">my-class-value</span>&quot;&gt;
                                 </span>
                             </div>
                             <div class="indent1">
@@ -224,15 +224,15 @@
                             <div class="indent1">
                                 <span class="openingTag htmlChild">
                                     &lt;img
-                                    <span class="attrName">src</span><span class="assnOperator">=</span>&quot;<span class="attrValue">srcValue</span>&quot;
-                                    <span class="attrName">alt</span><span class="assnOperator">=</span>&quot;<span class="attrValue">altValue</span>&quot;<span>&gt;</span>
+                                    <span class="attrName">src</span><span class="assnOperator">=</span>&quot;<span class="attrValue">img-src.jpeg</span>&quot;
+                                    <span class="attrName">alt</span><span class="assnOperator">=</span>&quot;<span class="attrValue">alt description</span>&quot;<span>&gt;</span>
                                 </span>
                             </div>
                             <div class="indent1">
                                 <span class="openingTag htmlParent htmlChild">
                                     &lt;div
-                                    <span class="attrName">id</span><span class="assnOperator">=</span>&quot;<span class="attrValue">myOtherIdValue</span>&quot;
-                                    <span class="attrName">class</span><span class="assnOperator">=</span>&quot;<span class="attrValue">myClassValue</span>&quot;&gt;
+                                    <span class="attrName">id</span><span class="assnOperator">=</span>&quot;<span class="attrValue">my-other-id-value</span>&quot;
+                                    <span class="attrName">class</span><span class="assnOperator">=</span>&quot;<span class="attrValue">my-class-value</span>&quot;&gt;
                                 </span>
                             </div>
                             <div class="indent2">
