adding the seasoning

--- a/cookbook/appetizer.html
+++ b/cookbook/appetizer.html
@@ -18,8 +18,8 @@
                     "This appetizer will help get you ready for the main course."
                 </div>
                 <div id="navLinks">
-                    <h2><a href="#">HTML</a></h2>
-                    <h2><a href="#">CSS</a></h2>
+                    <h2><a href="ingredients.html">HTML</a></h2>
+                    <h2><a href="seasonings.html">CSS</a></h2>
                     <h2><a href="#">LAYOUTS</a></h2>
                 </div>
             </header>
