--- a/cookbook/ingredients-cheatsheet.html
+++ b/cookbook/ingredients-cheatsheet.html
@@ -162,8 +162,8 @@
                     "Sometimes a dish must be baked multipled times before it's ready to be served."
                 </div>
                 <div id="navLinks">
-                    <h2><a href="#">HTML</a></h2>
-                    <h2><a href="#">CSS</a></h2>
+                    <h2><a href="ingredients.html">HTML</a></h2>
+                    <h2><a href="seasonings.html">CSS</a></h2>
                     <h2><a href="#">LAYOUTS</a></h2>
                 </div>
             </header>
