--- a/cookbook/ingredients.html
+++ b/cookbook/ingredients.html
@@ -16,8 +16,8 @@
                     "In a web page, HTML elements are like the ingredients used to make a cake."
                 </div>
                 <div id="navLinks">
-                    <h2><a href="#">HTML</a></h2>
-                    <h2><a href="#">CSS</a></h2>
+                    <h2><a href="ingredients.html">HTML</a></h2>
+                    <h2><a href="seasonings.html">CSS</a></h2>
                     <h2><a href="#">LAYOUTS</a></h2>
                 </div>
             </header>
