--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -16,8 +16,8 @@
                     "Use these demos to help you prepare, before serving the main course to students"
                 </div>
                 <div id="navLinks">
-                    <h2><a href="#">HTML</a></h2>
-                    <h2><a href="#">CSS</a></h2>
+                    <h2><a href="ingredients.html">HTML</a></h2>
+                    <h2><a href="seasonings.html">CSS</a></h2>
                     <h2><a href="#">LAYOUTS</a></h2>
                 </div>
             </header>
