--- a/cookbook/seasonings.html
+++ b/cookbook/seasonings.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>HTML Condiments - The Coding Cookbook</title>
+        <title>HTML Seasonings - The Coding Cookbook</title>
         <link href="css/cookbook.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="seasonings">
         <div id="background"></div>
         <nav>
             <header id="topHeader">
