--- a/cookbook/seasonings/border.html
+++ b/cookbook/seasonings/border.html
@@ -7,11 +7,37 @@
         <link href="css/border.css" rel="stylesheet">
     </head>
     <body>
-        <div id="container-1">
+        <p>
+            There are many different border properties, mostly
+            focused on allowing you to change the width, style,
+            and color of a border.
+        </p>
+        <p>
+            The border style is the only property with special
+            keywords, so we'll focus on a couple common border 
+            style values first, before combining all of the border 
+            properties together.
+        </p>
+
+        <h3>Border Style Values</h3>
+        <h5>Solid</h5>
+        <div class="border-style-solid"></div>
+        <h5>Dashed</h5>
+        <div class="border-style-dashed"></div>
+        <h5>Dotted</h5>
+        <div class="border-style-dotted"></div>
+        <br>
+
+        <h3>Combining Border Properties</h3>
+
+        <div id="combined-1">
             <p>
                 This div has a border set on it, with the 
                 border's width, style, and color all set at 
                 once.
+            </p>
+            <p>
+                <code>border: 10px solid coral;</code>
             </p>
             <p>
                 It has a rather thick 10px border-width, a 
@@ -24,9 +50,23 @@
                 and we can even target individual sides as well.
             </p>
         </div>
-        <div id="container-2">
+
+        <div id="combined-2">
             <p>
                 This div sets its border properties individually.
+            </p>
+            <p>
+                <code>
+                    border-width: 5px;
+                    <br>
+                    border-style: dashed;
+                    <br>
+                    border-color: #8888FF;
+                    <br>
+                    margin: 24px 0px;
+                    <br>
+                    padding: 24px;
+                </code>
             </p>
             <p>
                 It has a thinner 5px border-width, a 
@@ -47,11 +87,25 @@
                 separating the div from the content around it.
             </p>
         </div>
-        <div id="container-3">
+
+        <div id="combined-3">
             <p>
-                This div looks a little wacky, just because we're
-                showing how you can target individual sides at once,
+                This div looks a little wacky, just because it's
+                showing how we can target individual sides at once,
                 or even individual properties on a specific side.
+            </p>
+            <p>
+                <code>
+                    border-top: 8px dotted green;
+                    <br>
+                    border-right: 8px dashed red;
+                    <br>
+                    border-bottom-color: blue;
+                    <br>
+                    border-bottom-style: solid;
+                    <br>
+                    border-bottom-width: 4px;
+                </code>
             </p>
             <p class="pretty-in-pink">
                 Just to be clear, borders can be added to any 
