css drills and recipes

--- a/cookbook/appetizer.html
+++ b/cookbook/appetizer.html
@@ -20,7 +20,7 @@
                 <div id="navLinks">
                     <h2><a href="ingredients.html">HTML</a></h2>
                     <h2><a href="seasonings.html">CSS</a></h2>
-                    <h2><a href="#">LAYOUTS</a></h2>
+                    <h2><a href="recipes.html">LAYOUTS</a></h2>
                 </div>
             </header>
             <header id="bottomHeader">
