margin update (TIL) and margin drills 2.0

--- a/cookbook/seasonings/margin.html
+++ b/cookbook/seasonings/margin.html
@@ -192,7 +192,12 @@
             <p>
                 The "auto" value basically says to take up
                 all the available space on the side it's 
-                set to.
+                set to. 
+            </p>
+            <p>
+                BUT! It doesn't work on inline, inline-block,
+                or floated elements. And only if an explicit 
+                width is set on the element.
             </p>
             <p>
                 If an explicit width value is set on a 
