standardized css seasonings

--- a/cookbook/seasonings.html
+++ b/cookbook/seasonings.html
@@ -14,7 +14,7 @@
                 <h2 id="brand"><a href="#">The Coding Cookbook</a></h2>
                 <div id="quote">
                     "In a web page, CSS Properties are like the seasonings 
-                    used to enhance the flavor and appearance of your food."
+                    used to enhance<br>the flavor and appearance of your food."
                 </div>
                 <div id="navLinks">
                     <h2><a href="ingredients.html">HTML</a></h2>
