--- a/cookbook/seasonings/background-color.html
+++ b/cookbook/seasonings/background-color.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>background-color Property</title>
         <link href="css/background-color.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>background-color: aquamarine;</code>
+            <br>
+            <code>background-color: #FFBBCC;</code>
+            <br>
+            <code>background-color: rgb(47, 79, 255);</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p id="pink-background">
             This paragraph has its background-color set to
             light pink via the hexadecimal value 
