--- a/cookbook/seasonings/border-radius.html
+++ b/cookbook/seasonings/border-radius.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>border-radius Properties</title>
         <link href="css/border-radius.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>border-radius: 8px;</code>
+            <br>
+            <code>border-radius: 50%;</code>
+            <br>
+            <code>border-radius: 48px 0px;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The border-radius properties allow us to 
             round the corners of an element.
