--- a/cookbook/seasonings/border.html
+++ b/cookbook/seasonings/border.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>border Properties</title>
         <link href="css/border.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>border: 5px solid darkgrey;</code>
+            <br>
+            <code>border: 2px dashed crimson;</code>
+            <br>
+            <code>border: 10px dotted #FF77CC;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             There are many different border properties, mostly
             focused on allowing you to change the width, style,
