--- a/cookbook/seasonings/color.html
+++ b/cookbook/seasonings/color.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>color Property</title>
         <link href="css/color.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>color: crimson;</code>
+            <br>
+            <code>color: #4D66CF;</code>
+            <br>
+            <code>color: rgb(158, 6, 213);</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p id="green-text">
             This text is colored green by using one of the 
             standardized HTML Color Names; in this case, 
