--- a/cookbook/seasonings/display.html
+++ b/cookbook/seasonings/display.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>display Property (Basic)</title>
         <link href="css/display.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>display: block;</code>
+            <br>
+            <code>display: inline;</code>
+            <br>
+            <code>display: inline-block;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             There are many values that can be used with 
             the display property, and some of them are 
@@ -17,7 +27,7 @@
             examples.
         </p>
 
-        <h3>Examples of <code>display: block;</code></h3>
+        <h4>Examples of <code>display: block;</code></h4>
         <p>
             Setting <code>display: block;</code> transforms an 
             element into a block element, like a &lt;p&gt;, 
@@ -45,7 +55,7 @@
             <div class="block-styled">BLOCK (STYLED)</div>
         </div>
         
-        <h3>Examples of <code>display: inline;</code></h3>
+        <h4>Examples of <code>display: inline;</code></h4>
         <p>
             Setting <code>display: inline;</code> transforms 
             an element into an inline element, like a 
@@ -108,7 +118,7 @@
             want to use the next display value: inline-block.
         </p>
 
-        <h3>Examples of <code>display: inline-block;</code></h3>
+        <h4>Examples of <code>display: inline-block;</code></h4>
         <p>
             Setting <code>display: inline-block;</code> gives 
             us the best of both worlds: we can give an element 
@@ -160,7 +170,7 @@
             probably want to go with inline-block.
         </p>
 
-        <h3>Mixed Examples</h3>
+        <h4>Mixed Examples</h4>
 
         <div class="example">
             <div class="block-styled">BLOCK (STYLED)</div>
