--- a/cookbook/seasonings/font-family.html
+++ b/cookbook/seasonings/font-family.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>font-family Property</title>
         <link href="css/font-family.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>font-family: sans-serif;</code>
+            <br>
+            <code>font-family: Arial, Helvetica, sans-serif;</code>
+            <br>
+            <code>font-family: 'Times New Roman', Times, serif;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The font-family property allows us to change the 
             font of text targeted via CSS.
@@ -14,23 +24,31 @@
             in CSS: serif, sans-serif, monospace, cursive, and 
             fantasy.
         </p>
+        <h5>serif</h5>
         <p class="serif-family">
             The generic serif font family looks like this. (The 
             generic serif font is usually the default font 
             family in most browsers.)
         </p>
+        <h5>sans-serif</h5>
         <p class="sans-serif-family">
             The generic sans-serif font family looks like this.
         </p>
+        <h5>monospace</h5>
         <p class="monospace-family">
             The generic monospace font family looks like this.
         </p>
+        <h5>cursive</h5>
         <p class="cursive-family">
             The generic cursive font family looks like this.
         </p>
+        <h5>fantasy</h5>
         <p class="fantasy-family">
             The generic fantasy font family looks like this.
         </p>
+        <br>
+        <br>
+        <h4>Fallback Font Families</h4>
         <p>
             However, most of the time, we'd rather use a 
             specific font family we like over the generic 
