--- a/cookbook/seasonings/font-size.html
+++ b/cookbook/seasonings/font-size.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>font-size Property</title>
         <link href="css/font-size.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>font-size: 24px;</code>
+            <br>
+            <code>font-size: 2em;</code>
+            <br>
+            <code>font-size: 50%;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The font-size property allows us to change the 
             size of our text on the page. We can use both 
