--- a/cookbook/seasonings/list-style-type.html
+++ b/cookbook/seasonings/list-style-type.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>list-style-type Property</title>
         <link href="css/list-style-type.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>list-style-type: disc;</code>
+            <br>
+            <code>list-style-type: none;</code>
+            <br>
+            <code>list-style-type: circle;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The list-style-type property can be used to alter,
             or even remove, the bullets of list item elements.
