--- a/cookbook/seasonings/margin.html
+++ b/cookbook/seasonings/margin.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>margin Properties</title>
         <link href="css/margin.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>margin: 24px;</code>
+            <br>
+            <code>margin: 0px auto;</code>
+            <br>
+            <code>margin-top: 12px;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             There are several margin related properties
             and values that we can take advantage of. 
