--- a/cookbook/seasonings/padding.html
+++ b/cookbook/seasonings/padding.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>padding Properties</title>
         <link href="css/padding.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>padding: 12px;</code>
+            <br>
+            <code>padding: 48px 24px;</code>
+            <br>
+            <code>padding-left: 24px;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             There are several padding related properties
             and values that we can take advantage of. 
