--- a/cookbook/seasonings/text-align.html
+++ b/cookbook/seasonings/text-align.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>text-align Property</title>
         <link href="css/text-align.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>text-align: left;</code>
+            <br>
+            <code>text-align: center;</code>
+            <br>
+            <code>text-align: right;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The text-align property allows us to align content 
             within an element. (Contrary to what the name 
