--- a/cookbook/seasonings/text-decoration.html
+++ b/cookbook/seasonings/text-decoration.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>text-decoration Property</title>
         <link href="css/text-decoration.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>text-decoration: underline;</code>
+            <br>
+            <code>text-decoration: none;</code>
+            <br>
+            <code>text-decoration: line-through;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The text-decoration property allows you to add 
             line "decorations" to text.  
