--- a/cookbook/seasonings/width.html
+++ b/cookbook/seasonings/width.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>width Properties</title>
         <link href="css/width.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>width: 500px;</code>
+            <br>
+            <code>width: 100%;</code>
+            <br>
+            <code>width: 50%;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p>
             The width property, as you might be able to guess,
             allows you to specify a width for a particular
