--- a/cookbook/seasonings/font-style.html
+++ b/cookbook/seasonings/font-style.html
@@ -5,8 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>font-style Property</title>
         <link href="css/font-style.css" rel="stylesheet">
+        <link href="css/shared.css" rel="stylesheet">
     </head>
     <body>
+        <div class="recipe-example">
+            <h4>Basic Code Snippets</h4>
+            <code>font-style: normal;</code>
+            <br>
+            <code>font-style: italic;</code>
+            <br>
+            <code>font-style: oblique;</code>
+        </div>
+        <h4>Additional Examples</h4>
         <p class="not-italic">
             There are many different font properties in CSS,
             some of which can do the same things stylistically
