--- a/cookbook/meal-prep.html
+++ b/cookbook/meal-prep.html
@@ -7,7 +7,7 @@
         <title>Meal Prep - The Chef's Cookbook</title>
         <link href="css/cookbook.css" rel="stylesheet">
     </head>
-    <body>
+    <body id="meal-prep">
         <div id="background"></div>
         <nav>
             <header id="topHeader">
