--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -58,31 +58,31 @@
     </style>
   </head>
   <body>
-    <h1>GDWD 105 Agenda for July 6<sup>th</sup></h1>
+    <h1>GDWD 105 Agenda for July 7<sup>th</sup></h1>
     <div id="agenda">
       <!-- <h2>Office Hours (4:30-5:30): Available Upon Request (no guarantees on same-day requests!)</h2> -->
       <h2>Announcements (6:10)</h2>
       <h3>(if you're not here by 6:10, you're tardy!)</h3>
-      <h2>Period 1 (6:00-7:10): Back to Basics Drills <br>(Borders and Padding)</h2>
+      <h2>Period 1 (6:00-7:10): FINAL EVAL</h2>
       <h3>SHORT BREAK (10 MIN)</h3>
-      <h2>Period 2 (7:20-8:30): Back to Basics Drills <br>(Margin and Containers/Selectors)</h2>
+      <h2>Period 2 (7:20-8:30): FINAL EVAL</h2>
       <h3>DINNER BREAK (45 MIN)</h3>
-      <h2>Period 3 (9:15-11:00): Lab Time</h2>
+      <h2>Period 3 (9:15-11:00): FINAL EVAL</h2>
     </div>
 
     <h1>Assignments, Deliverables &amp; More</h1>
     <div id="agenda">
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Mock Final Eval (Hulu) - Complete | Project</span>
-        <span>Due TONIGHT at 11pm</span>
+        <span>Due YESTERDAY at 11pm</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>Portfolio Web Portal | Extra Credit</span>
-        <span>Due TONIGHT at 11pm</span>
+        <span>Due YESTERDAY at 11pm</span>
       </h2>
-      <h2 class="assnItem highlight">
+      <h2 class="assnItem warning">
         <span>UI/UX Implementation | Extra Credit</span>
-        <span>Due TONIGHT at 11pm</span>
+        <span>Due YESTERDAY at 11pm</span>
       </h2>
     </div>
 
