kahoots code and color palettes assignment

--- a/cookbook/meal-prep/basic-css-drills/page2.html
+++ b/cookbook/meal-prep/basic-css-drills/page2.html
@@ -16,7 +16,9 @@
             <p>
                 Write CSS in drill.css to target the appropriate
                 ids in the HTML below to make it look like the 
-                image above. (HINT: use the color #F711F7)
+                image above. (HINT: &lt;span&gt; elements are
+                used to group text together inline; target them
+                and use #F711F7)
             </p>
             <div class="solution">
                 <p id="d2-p1">
