missing meal prep config for palettes

--- a/cookbook/meal-prep/color-palettes/page0.html
+++ b/cookbook/meal-prep/color-palettes/page0.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ultra Basic Style Guides (Exercise)</title>
-        <link href="css/style.css" rel="stylesheet">
+        <title>Color Palettes (Exercise)</title>
+        <link href="css/style.css" rel="stylesheet" data-meal-prep>
+        <!-- again, data-meal-prep is not required -->
     </head>
     <body>
         <h2 id="style-1-heading">Verdant Dream</h2>
